# F1TenthVanderbilt

./: Dockerfile  README.md  docker-compose.yml  docker-compose2.yml  frames.gv
a_stars_pure_pursuit/scripts/: pure_pursuit.py  remap_gazebo_pose.py  remap_gazebo_pose2.py  visualize_markers.py  waypoint_logger_pure_pursuit.py
f110-fall2018-skeletons/labs/wall_following/launch/: docker.launch  wall_following.launch
f110-fall2018-skeletons/labs/wall_following/logs/: .~lock.pure-pursuit-wp-2019-04-07-21-38-45.csv#  wp-2019-03-27-18-22-10.csv
f110-fall2018-skeletons/labs/wall_following/scripts/: control.py  message_to_tf.py  pid_error.py  twist_to_ackermann_teb.py
f110-fall2018-skeletons/simulator/f1_10_sim/race/cfg/: base_local_planner_params.yaml
f110-fall2018-skeletons/simulator/f1_10_sim/race/launch/: amcl.launch  bag_rviz.rviz  bag_test.launch  docker.launch  docker_rviz.launch  f1_tenth.launch  f1amcl.launch  frames.gv  generate_map_bag.launch  hector_slam.launch  laser_scan_matcher.launch  laser_scan_matcher_bag.launch  mapping_default.launch  multi_car_general.launch  slam.launch  slambag.launch
f110-fall2018-skeletons/simulator/f1_10_sim/race/scripts/: base_link_to_laser_bag.py  control.py  disparity_extender_vanderbilt.py  disparity_extender_vanderbilt2.py  disparity_extender_vanderbilt_patrick.py  estimatedBaseLinkMap.py  follow_lead.py  generate_goals.py  keyboard2.py  map_to_odom_bag.py  message_to_tf2.py  process_and_plot_lidar_data.py  sim_connector2.py
f110-fall2018-skeletons/simulator/racecar-simulator/racecar_control/launch/: racecar_control2.launch
f110-fall2018-skeletons/simulator/racecar-simulator/racecar_control/scripts/: servo_commands2.py
f110-fall2018-skeletons/simulator/racecar-simulator/racecar_description/urdf/: macros2.xacro  materials2.xacro  racecar.gazebo  racecar.xacro  racecar2.gazebo  racecar2.xacro
f110-fall2018-skeletons/simulator/racecar-simulator/racecar_gazebo/launch/: two_car.launch
f110-fall2018-skeletons/simulator/racecar-simulator/racecar_gazebo/scripts/: gazebo_odometry2.py
f110-fall2018-skeletons/system/racecar/racecar/launch/: mux2.launch
f110-fall2018-skeletons/system/waypoint_logger/scripts/: waypoint_logger.py
hector_slam/hector_mapping/launch/: hectorslambag.launch  mapping_bag.launch  mapping_default.launch  teb.rviz  visualizationdefault.rviz
racecar-ws/devel/: setup.sh
racecar-ws/devel/include/racecar/: drive_param.h  drive_values.h  pid_input.h
racecar-ws/devel/include/racecar_potential_field_controller/: RacecarPotentialFieldControllerConfig.h
racecar-ws/devel/include/vesc_msgs/: VescState.h  VescStateStamped.h
racecar-ws/devel/lib/pkgconfig/: ackermann_cmd_mux.pc  racecar.pc  racecar_potential_field_controller.pc  racecar_safety_controller.pc  sparkfun_9dof_razor_imu_m0.pc
racecar-ws/devel/lib/racecar_potential_field_controller/: node
racecar-ws/devel/lib/sparkfun_9dof_razor_imu_m0/: driver_node
racecar-ws/devel/lib/vesc_ackermann/: ackermann_to_vesc_node  vesc_to_odom_node
racecar-ws/devel/lib/vesc_driver/: vesc_driver_node
racecar-ws/devel/share/ackermann_cmd_mux/cmake/: ackermann_cmd_muxConfig.cmake
racecar-ws/devel/share/racecar/cmake/: racecar-msg-extras.cmake  racecar-msg-paths.cmake  racecarConfig.cmake
racecar-ws/devel/share/racecar_potential_field_controller/cmake/: racecar_potential_field_controllerConfig.cmake
racecar-ws/devel/share/racecar_potential_field_controller/docs/: RacecarPotentialFieldControllerConfig-usage.dox  RacecarPotentialFieldControllerConfig.dox  RacecarPotentialFieldControllerConfig.wikidoc
racecar-ws/devel/share/racecar_safety_controller/cmake/: racecar_safety_controllerConfig.cmake
racecar-ws/devel/share/sparkfun_9dof_razor_imu_m0/cmake/: sparkfun_9dof_razor_imu_m0Config.cmake
racecar-ws/src/racecar/: racecar-vm.rosinstall  racecar.rosinstall
racecar-ws/src/racecar-controllers/: LICENSE  README.md
racecar-ws/src/racecar-controllers/racecar_controllers/: CMakeLists.txt
racecar-ws/src/racecar-controllers/racecar_potential_field_controller/: CMakeLists.txt  nodelet_plugin.xml  package.xml
racecar-ws/src/racecar-controllers/racecar_potential_field_controller/config/: RacecarPotentialFieldController.cfg  default.yaml  sim.yaml
racecar-ws/src/racecar-controllers/racecar_potential_field_controller/include/racecar_potential_field_controller/: controller.h
racecar-ws/src/racecar-controllers/racecar_potential_field_controller/launch/: node.launch  viz.launch  viz.rviz
racecar-ws/src/racecar-controllers/racecar_potential_field_controller/src/: controller.cpp  node.cpp  nodelet.cpp
racecar-ws/src/racecar-controllers/racecar_safety_controller/: CMakeLists.txt  package.xml
racecar-ws/src/racecar/racecar/: CMakeLists.txt
racecar-ws/src/racecar/sparkfun_9dof_razor_imu_m0/: CMakeLists.txt  nodelet_plugin.xml
racecar-ws/src/racecar/sparkfun_9dof_razor_imu_m0/include/sparkfun_9dof_razor_imu_m0/: driver.h
racecar-ws/src/racecar/sparkfun_9dof_razor_imu_m0/launch/: driver_node.launch  driver_nodelet.launch
racecar-ws/src/racecar/sparkfun_9dof_razor_imu_m0/src/: driver.cpp  node.cpp  nodelet.cpp
range_libc/pywrapper/: compile.sh  compile_with_cuda.sh
(+58 files in other folders)
