<?xml version="1.0"?>
<package>
  <name>racecar_potential_field_controller</name>
  <version>0.0.1</version>
  <description>
    Potential field controller for the RACECAR.
  </description>

  <maintainer email="boulet@ll.mit.edu">Michael T. Boulet</maintainer>
  <author email="boulet@ll.mit.edu">Michael T. Boulet</author>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/racecar_potential_field_controller</url>
  <url type="repository">https://github.mit.edu/racecar/racecar_potential_field_controller</url>
  <url type="bugtracker">https://github.mit.edu/racecar/racecar_potential_field_controller/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>

</package>
